# dork-llm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/: api.py  dashboard.py
apps/web/: app.js  index.html  lib.js  styles.css
configs/: dorkllm_frontier.yaml  eval_default.yaml  rag_default.yaml  train_tiny_gpt.yaml
data/: README.md
data/sample_docs/: evaluation.md  rag_systems.md  training.md  transformers.md
docs/: agent_design.md  architecture.md  eval_harness.md  example_eval_report.md  github_issues_plan.md  limitations.md  linkedin_post.md  model_card.md  portfolio_summary.md  rag_design.md  resume_bullets.md
dork/: __init__.py  cli.py  pipelines.py
dork/agents/: __init__.py  research_agent.py  tools.py
dork/data/: __init__.py  datasets.py  instructions.py  loader.py
dork/evaluation/: __init__.py  base.py  evaluators.py  harness.py  metrics.py  report.py  statistics.py
dork/evaluation/datasets/: arithmetic.jsonl  instructions.jsonl  json_tasks.jsonl  mcq_reasoning.jsonl  rag_faithfulness.jsonl  safety_refusal.jsonl  tool_use.jsonl
dork/generation/: __init__.py  generator.py  providers.py  sampling.py
dork/models/: __init__.py  layers.py  tiny_gpt.py
dork/rag/: __init__.py  chunking.py  embeddings.py  loaders.py  pipeline.py  reranker.py  schema.py  vectorstore.py
dork/serving/: __init__.py  runtime.py  schemas.py  service.py  settings.py
dork/tokenizer/: __init__.py  base.py  bpe.py  char.py  factory.py
dork/training/: __init__.py  checkpoint.py  scheduler.py  sft.py  trainer.py
dork/utils/: __init__.py  config.py  io.py  logging.py  paths.py  seed.py  tracking.py
notebooks/: evaluate.ipynb  rag_demo.ipynb  train.ipynb
scripts/: benchmark_inference.py  evaluate_model.py  finetune_sft.py  generate_text.py  ingest_documents.py  prepare_dataset.py  query_rag.py  run_agent.py  scaling_study.py  smoke_test.py  train_tiny_gpt.py  train_tokenizer.py
tests/: conftest.py  test_agent.py  test_api.py  test_chunking.py  test_config.py  test_evaluation.py  test_metrics.py  test_model.py  test_rag.py  test_serving.py  test_sft.py  test_statistics.py  test_tokenizer.py  test_tracking.py  test_training.py
tests/e2e/: chat.spec.js
tests/web/: lib.test.js
